Fix css - title font and text left alignment

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -113,6 +113,7 @@
     	color: #333;
 	    margin-bottom: 10px;
 	    font-size: $small-font-size * 1.1;
+	    text-align: left;
     }
 }
 @media (max-width: 1120px) {
